Update z-index on header container to fix UX

--- a/src/Header/Navigation.module.scss
+++ b/src/Header/Navigation.module.scss
@@ -35,7 +35,7 @@
 /************/
 
 .header {
-  z-index: 1000;
+  z-index: 100000;
   width: 100%;
   padding: 0.5rem;
   background: linear-gradient(182.26deg, rgba(0, 0, 0, 0.2) 1.89%, rgba(0, 0, 0, 0) 98.11%),
@@ -140,7 +140,6 @@
       left: 0;
       width: 100vw;
       height: 100vh;
-      z-index: 1000000;
       background: var(--darkBrown);
       backdrop-filter: blur(5px);
 
